# Taller5-SE

./: CMakeLists.txt  README.md
inlcude/: operaciones.h
lib/: CMakeLists.txt  Makefile  operaciones.c
src/: calculadora.c
